v 5.2.0
  - Turbolinks
  - Git over http with ldap credentials
  - Diff with better colors and some spacing on the corners
  - Default values for project features
  - Fixed huge_commit view
  - Restyle project clone panel
  - Move Gitlab::Git code to gitlab_git gem
  - Move update docs in repo
  - requires gitlab-shell v1.4.0

v 5.1.0
  - You can login with email or username now
  - Corrected project transfer rollback when repository cannot be moved
  - Move both repo and wiki when project transfer requrested
  - Admin area: project editing was removed from admin namespace
  - Access: admin user has now access to any project.
  - Notification settings
  - Gitlab::Git set of objects to abstract from grit library
  - Replace Unicorn web server with Puma
  - Backup/Restore refactored. Backup dump project wiki too now
  - Restyled Issues list. Show milestone version in issue row
  - Restyled Merge Request list
  - Backup now dump/restore uploads
  - Improved perfomance of dashboard (Andrew Kumanyaev)
  - File history now tracks renames (Akzhan Abdulin)
  - Drop wiki migration tools
  - Drop sqlite migration tools
  - project tagging
  - Paginate users in API
  - Restyled network graph (Hiroyuki Sato)

v 5.0.1
  - Fixed issue with gitlab-grit being overrided by grit

v 5.0.0
  - Replaced gitolite with gitlab-shell
  - Removed gitolite-related libraries
  - State machine added
  - Setup gitlab as git user
  - Internal API
  - Show team tab for empty projects
  - Import repository feature
  - Updated rails
  - Use lambda for scopes
  - Redesign admin area -> users
  - Redesign admin area -> user
  - Secure link to file attachments
  - Add validations for Group and Team names
  - Restyle team page for project
  - Update capybara, rspec-rails, poltergeist to recent versions
  - Wiki on git using Gollum
  - Added Solarized Dark theme for code review
  - Dont show user emails in autocomplete lists, profile pages
  - Added settings tab for group, team, project